section js fixes, remove extra padding on related products

--- a/src/styles/sections/product.scss
+++ b/src/styles/sections/product.scss
@@ -121,7 +121,7 @@
 //-----------------------------------------
 .related-products {
 	margin-top: 3rem;
-	padding: 3rem;
+	padding: 3rem 0;
 	background-color: $color-secondary;
 	.section-heading {
 		font-size: 3.2rem;
